# Test_Task

./: CMakeLists.txt  README.md
readers_writers/: CMakeLists.txt
readers_writers/src/: main.cpp
xml_tree_edit/: CMakeLists.txt
xml_tree_edit/include/: command.h  emptydelegate.h  mainwindow.h  salarydelegate.h  textdelegate.h  treewidget.h
xml_tree_edit/src/: command.cpp  emptydelegate.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  salarydelegate.cpp  textdelegate.cpp  treewidget.cpp
